Closed
Bug 1635600
Opened 5 years ago
Closed 5 years ago
Assertion failure: mDocumentPrincipal->Equals(aNewDocumentPrincipal)
Categories
(Core :: DOM: Navigation, defect)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: annyG, Assigned: mattwoodrow)
Details
Attachments
(1 file)
This crash happens when we run crash test docshell/base/crashtests/1331295.html with fission enabled. The assertion is triggered here https://searchfox.org/mozilla-central/rev/7908ce29657cfd623993046bd8e38664e1c0b28e/dom/ipc/WindowGlobalChild.cpp#485 in debug builds.
Reporter | ||
Updated•5 years ago
|
Summary: Crash in [@ IPCError-browser | RecvUpdateDocumentPrincipal Trying to reuse WindowGlobalParent but the principal of the new document] → Assertion failure: mDocumentPrincipal->Equals(aNewDocumentPrincipal)
Assignee | ||
Comment 1•5 years ago
|
||
Depends on D73995
Updated•5 years ago
|
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9b20b1812edc
Don't recreate null principal for windows created by a new window global child actor. r=nika
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox78:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in
before you can comment on or make changes to this bug.
Description
•