Bug 1635600 - Don't recreate null principal for windows created by a new window global child actor. r=nika

Depends on D73995

Differential Revision: https://phabricator.services.mozilla.com/D73996